Starting Item Requesters, patched deconstructing
- Item Requesters are in their early stage! Currently they can be.. constructed on modules, and that's about it really
- Added two more patches to disallow deconstructing a module with something attached to it (one for the logic, and one for the tooltip when the player hovers over the module)
- Disallowed construction of attachables if the module is not yet finalised

--- a/AutomationAge.csproj
+++ b/AutomationAge.csproj
@@ -34,7 +34,11 @@
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Language\" />
+  </ItemGroup>
+
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="mkdir &quot;F:\Games\SteamGames\steamapps\common\Subnautica\BepInEx\plugins\$(TargetName)&quot;&#xD;&#xA;copy /Y &quot;$(TargetPath)&quot; &quot;F:\Games\SteamGames\steamapps\common\Subnautica\BepInEx\plugins\$(TargetName)&quot;" />
+    <Exec Command="mkdir &quot;F:\Games\SteamGames\steamapps\common\Subnautica\BepInEx\plugins\$(TargetName)&quot;&#xD;&#xA;copy /Y &quot;$(TargetPath)&quot; &quot;F:\Games\SteamGames\steamapps\common\Subnautica\BepInEx\plugins\$(TargetName)&quot;&#xD;&#xA;robocopy /E &quot;D:\Mods\Subnautica\$(TargetName)\Language&quot; &quot;F:\Games\SteamGames\steamapps\common\Subnautica\BepInEx\plugins\$(TargetName)\Language&quot;" />
   </Target>
 </Project>
