--- a/AutomationAge.csproj
+++ b/AutomationAge.csproj
@@ -7,6 +7,10 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>11</LangVersion>
 	<RootNamespace>AutomationAge</RootNamespace>
+    
+    <BepInExPluginGuid>com.9thcore.automationage</BepInExPluginGuid>
+    <BepInExPluginName>Automation Age</BepInExPluginName>
+    <BepInExPluginVersion>1.0.0</BepInExPluginVersion>
 
     <RestoreAdditionalProjectSources>
       https://api.nuget.org/v3/index.json;
